test/string/unterminated.lox
// error: unterminated string
"self string has no close quote